fixed dark mode with localStorage and made a js dir to place js files in it.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -643,6 +643,10 @@ video {
   display: block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
@@ -675,10 +679,6 @@ video {
   height: 40px;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -705,14 +705,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.max-w-full {
-  max-width: 100%;
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
@@ -801,10 +793,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-b-2xl {
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
@@ -813,11 +801,6 @@ video {
 .bg-\[\#F3F6F6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(243 246 246 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F8FBFB\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 251 251 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#ef4060\] {
@@ -904,11 +887,6 @@ video {
   padding-right: 2rem;
 }
 
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -975,11 +953,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-\[35px\] {
@@ -1063,10 +1036,6 @@ video {
 
 .opacity-100 {
   opacity: 1;
-}
-
-.outline {
-  outline-style: solid;
 }
 
 .transition {
@@ -1250,6 +1219,10 @@ video {
   border-width: 2px;
 }
 
+.dark .dark\:bg-transparent {
+  background-color: initial !important;
+}
+
 @media (min-width: 1280px) {
   .xl\:container {
     width: 100%;
@@ -1290,11 +1263,6 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-:is(.dark .dark\:bg-\[\#0D0D0D\]) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 13 13 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:bg-\[\#111111\]) {
