--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,3 +147,7 @@
 .dark .about-box {
     border-width: 2px;
 }
+
+.dark .dark\:bg-transparent {
+    background-color: initial !important;
+}
